# multisnake

./: .gitignore  Cargo.toml  player.py
bots/python/: dont_crash_ai.py  go_up_ai.py  snakelib.py
src/: lib.rs  main.rs
src/base_snake/: consts.rs  mod.rs  object.rs  scoreboard.rs  snake.rs  snakegrid.rs
src/base_snake/scenes/: connect.rs  mod.rs  snake_draw.rs
src/base_snake/snake_controller/: ai_controller.rs  keyboard_controller.rs  mod.rs
