[package]
name = "multisnake"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4.13"
rand = "0.8.5"

[env]
RUST_BACKTRACE = "1"

[profile.dev]
overflow-checks = true

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation", "Win32_System_Pipes", "Win32_System_IO", "Win32_Security", "Win32_Storage_FileSystem",
]
