[package]
name = "multisnake"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
macroquad = { version = "0.4.13", features = ["audio"] }

[env]
RUST_BACKTRACE = "1"

[profile.dev]
overflow-checks = true

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation", "Win32_System_Pipes", "Win32_System_IO", "Win32_Security", "Win32_Storage_FileSystem",
]
